Fix issue persisting a user entity with associated roles #2